[metadata]
name = 'tingyun_api'
version = '0.0.1'
description = ''
author = 'tingyunsay'
author_email = '13284638588@163.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/_/tingyun_api'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
